--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -45,8 +45,12 @@
     </section>
     <section style="display: flex;justify-content: space-around;align-items: center;flex-wrap: wrap;">
         {% for category in category %}
-        <article style="width: 200px; box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.25);border-radius:30px;text-align: center;height: 30px;">
+        <article style="overflow: hidden;margin:100px 0;width: 200px; box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.25);border-radius:30px;text-align: center;height: 200px;">
+            <img src="{{ category.image.url }}" width="100%" height="100px" style="object-fit: cover; " alt="">
+           <br><br>
             {{ category.title }}
+            <br><br>
+            <button style="border-radius: 30px;width: 100px;height: 30px;box-shadow: 0px 0px 12px 0px rgba(0, 0, 0, 0.25);border:none;"> <a href="{% url 'category_detail' category_id=category.id %}">Подробнее</a></button>
         </article>
         {% endfor %}
     </section>
