--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -22,7 +22,7 @@
             <a href="{% url 'shop' %}" style="color:rgba(0, 0, 0, 0.55); " class="link">Магазин</a>
             <a href="#" style="color:rgba(0, 0, 0, 0.55);">Скидки</a>
             <div class="navbnone">
-                <select name="" id="">
+                <select class="select" name="" id="">
                     <option value="">русский</option>
                     <option value="">english</option>
                 </select>
