--- a/app/templates/category.html
+++ b/app/templates/category.html
@@ -26,4 +26,10 @@
 
     </section>
 </main>
+<script>
+        document.querySelector('.burger').addEventListener('click', function() {
+    this.classList.toggle('active');
+    document.querySelector('.nav').classList.toggle('open');
+})
+</script>
 {% endblock %}
