--- a/app/templates/products.html
+++ b/app/templates/products.html
@@ -18,4 +18,10 @@
     </section>
  
 </main>
+<script>
+    document.querySelector('.burger').addEventListener('click', function() {
+    this.classList.toggle('active');
+    document.querySelector('.nav').classList.toggle('open');
+})
+</script>
 {% endblock %}
