--- a/app/templates/shop.html
+++ b/app/templates/shop.html
@@ -33,6 +33,20 @@
             </select>
         </article>
     </section>
+    <section style="display: flex;align-items: center;justify-content: space-around;flex-wrap: wrap;">
+      
+        {% for item in product %}
+        <article class="box">
+          
+           <img src="{{ item.image.url }}" width="100%" height="200" style="object-fit: cover;" alt="img">
+           <h2 style="text-align: center;">{{ item.title }}</h2>
+           <p  style="word-wrap: break-word; padding:10px;">{{ item.description|truncatechars:150|truncatewords:100 }}</p>
+           <p style="text-align: center;">${{ item.cost }}</p>
+          
+       </article> 
+       {% endfor %}
+
+    </section>
 </main>
 <script>
     document.querySelector('.burger').addEventListener('click', function() {
